@@ -5,6 +5,8 @@ Date: ???
     - Reverted default settings override of Bob's Adjustable Inserters mod
     - Made Long Inserters ignore tech cost modifier
     - Streamlined hand crafting of wood pellets and boards
+    - Standardized terrain vehicle speed
+    - Refund all landfill when painting over sand islands
   Bugfixes:
     - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
     - Fixed multiplayer desync issue
